avance de estilos

--- a/index.html
+++ b/index.html
@@ -17,9 +17,17 @@
             <section class="messages">
             <div class="message">
                 <img class="logo" src="https://ferraresir.github.io/OracleOne-Challenge1/assets/Vector.png" alt="logo">
-
-                message1</div>
-            <aside class="messageBox">message 2</aside>
+                <div >
+                    <input class="message-text" type="text" placeholder="Ingrese su texto aqui...">
+                </div>
+            </div>
+            <aside class="messageBox">
+            <div class="messageDesencriptar">
+                <img src="https://sandovaldavid.github.io/Challenge-01--Codificador/img/Mu%C3%B1eco.png" alt="muñeco-lupa">
+                <h3>Ningun mensaje fue encontrado</h3>
+                <p>Ingrese el texto que desee encriptar y desencriptar</p>
+            </div>
+            </aside>
             </section>
         </main>
         
