avance de estilosy buttons

--- a/index.html
+++ b/index.html
@@ -18,7 +18,14 @@
             <div class="message">
                 <img class="logo" src="https://ferraresir.github.io/OracleOne-Challenge1/assets/Vector.png" alt="logo">
                 <div >
-                    <input class="message-text" type="text" placeholder="Ingrese su texto aqui...">
+                    <textarea rows="9" cols="48" class="message-text" type="text" placeholder="Ingrese su texto aqui..."></textarea>
+                </div>
+                <div class="boxBotones">
+                    <p>! Solo letras minusculas y sin acentos</p>
+                    <div>
+                        <button class="message-button oscuro">Encriptar</button>
+                        <button class="message-button claro">Desencriptar</button>
+                    </div>
                 </div>
             </div>
             <aside class="messageBox">
